modules/vpc/nat.tf
# NAT EIPs
resource "aws_eip" "nat_eip" {
  domain   = "vpc"
  count = length(aws_subnet.public_subnets)

  tags = {
    Name = "${local.name}-nat_eip"
  }
}

# NAT Gateway
resource "aws_nat_gateway" "nat_gw" {
  allocation_id = aws_eip.nat_eip[count.index].id
  subnet_id     = aws_subnet.public_subnets[count.index].id
  count         = length(aws_subnet.public_subnets)

  tags = {

    Name = "${local.name}-nat_gw-${substr(element(var.availability_zones, count.index), -2, 2)}"
  }
}
